--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,22 @@
-APP_NAME=Laravel
+APP_NAME=Capylendar
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=
+APP_PORT=
+APP_ADMIN_EMAIL=admin@example.com
 
-APP_LOCALE=en
-APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+APP_LOCALE=cs
+APP_FALLBACK_LOCALE=cs
+APP_FAKER_LOCALE=cs_CZ
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
+
+APP_BLUE_NAME=Partner1
+APP_PINK_NAME=Partner2
+APP_YELLOW_NAME=Oba
+APP_EVENT_HEART_KEYWORDS=word1,word2
 
 # PHP_CLI_SERVER_WORKERS=4
 
@@ -20,12 +27,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=pgsql
+DB_PORT=5432
+DB_DATABASE=capylendar
+DB_USERNAME=
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
