CAPY-54 change loading color to primary color, add it to env file

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ APP_DEBUG=true
 APP_URL=
 APP_PORT=
 APP_ADMIN_EMAIL=admin@example.com
+APP_PRIMARY_COLOR='#f6339a'
 
 APP_LOCALE=cs
 APP_FALLBACK_LOCALE=cs
