feat: implement push notifications for daily event reminders with user settings and subscription management.

--- a/.env.example
+++ b/.env.example
@@ -70,3 +70,10 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+VAPID_PUBLIC_KEY=
+VAPID_PRIVATE_KEY=
+VAPID_SUBJECT=mailto:${APP_ADMIN_EMAIL}
+
+NOTIFICATION_WAKE_TOKEN=
+VITE_VAPID_PUBLIC_KEY="${VAPID_PUBLIC_KEY}"
