--- a/.github/workflows/larastan.yml
+++ b/.github/workflows/larastan.yml
@@ -1,4 +1,4 @@
-name: tests
+name: larastan
 
 on:
   push:
@@ -8,8 +8,12 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
 
+permissions:
+  contents: read
+
 jobs:
-  ci:
+  analysis:
+    name: Larastan Analysis
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -18,7 +22,7 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: 8.4
+          php-version: '8.4'
           tools: composer:v2
           coverage: none
 
@@ -41,23 +45,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-composer-
 
-      - name: Install Node Dependencies
-        run: npm ci
+      - name: Install Dependencies
+        run: |
+          composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+          npm ci
 
-      - name: Install Composer Dependencies
-        run: composer install --no-interaction --prefer-dist --optimize-autoloader
-
-      - name: Copy Environment File
-        run: cp .env.example .env
-
-      - name: Generate Application Key
-        run: php artisan key:generate
-
-      - name: Generate Wayfinder Actions
-        run: php artisan wayfinder:generate
-
-      - name: Build Assets
-        run: npm run build
-
-      - name: Tests
-        run: ./vendor/bin/pest
+      - name: Run Larastan
+        run: vendor/bin/phpstan analyse
