refactor: extract OpenGraph metadata resolution into a shared concern and dynamically style Todo card checkboxes based on priority.

--- a/composer.json
+++ b/composer.json
@@ -95,7 +95,7 @@
             "phpstan analyze",
             "npm run format",
             "pint",
-            "@php artisan test"
+            "@test"
         ]
     },
     "extra": {
